--- a/res/layout/message_dialog_layout.xml
+++ b/res/layout/message_dialog_layout.xml
@@ -23,6 +23,7 @@
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_centerVertical="true"
+                android:background="@drawable/warning"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="8dp">
             </Button>
