--- a/res/layout/summary_details_list_layout.xml
+++ b/res/layout/summary_details_list_layout.xml
@@ -114,7 +114,8 @@
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_gravity="bottom"
-            android:background="#333333" >
+            android:background="#333333"
+            android:id="@+id/summary_details_layout_bottom_pannel">
 
         <LinearLayout
                 android:layout_width="fill_parent"
