changed edit text input types

--- a/res/layout/settings_layout.xml
+++ b/res/layout/settings_layout.xml
@@ -162,7 +162,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:inputType="text"
+                android:inputType="phone"
                 android:textSize="20dp" >
             </EditText>
         </LinearLayout>
