--- a/res/layout/transaction_layout.xml
+++ b/res/layout/transaction_layout.xml
@@ -128,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:inputType="text"
+                android:inputType="number"
                 android:textSize="20dp" >
             </EditText>
         </LinearLayout>
@@ -155,7 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:inputType="text"
+                android:inputType="numberDecimal"
                 android:textSize="20dp" >
             </EditText>
         </LinearLayout>
